force-app/main/default/objects/Booking__c/fields/Booking_Seat__c.field-meta.xml
<CustomField>
    <fullName>Booking_Seat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Seat</label>
    <referenceTo>Seat__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>