force-app/main/default/objects/Booking__c/fields/Booking_Stat__c.field-meta.xml
<CustomField>
    <fullName>Booking_Stat__c</fullName>
    <label>Booking Status</label>
    <length>16</length>
    <type>Text</type>
</CustomField>