force-app/main/default/objects/Booking__c/fields/Booking_User__c.field-meta.xml
<CustomField>
    <fullName>Booking_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>